# natif-code

./: CMakeLists.txt  main.cpp  my_openCv.cpp  my_openCv.hpp
build-exec/: CMakeCache.txt  Makefile  cmake_install.cmake  main
